policies/synthesized-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network
  namespace: default
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: target-app
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: target-app-network
  namespace: default
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 3.222.96.182/32
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 3.233.92.44/32
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 34.203.4.216/32
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 44.207.180.194/32
  - ports:
    - port: 6379
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: redis
  - ports:
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: traffic-generator
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: target-app
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: traffic-generator-network
  namespace: default
spec:
  egress:
  - ports:
    - port: 8080
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: target-app
  - ports:
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
  podSelector:
    matchLabels:
      run: traffic-generator
  policyTypes:
  - Ingress
  - Egress
